# bsky-data-analysis

./: .gitignore  AGENTS.md  README.md
EDA/: 01_create_all_events.sql  02_create_engaged_events.sql  02_fix_all_events.sql  run.py
cascade-creation/: 01_dump_reposts.sql  README.md  build_cascades
cascade-metrics/: README.md  build_metrics
docs/: DATABASE.md  EDA.md  database-data-description.md  inter-post-gap-analysis.md  inter-post-gaps.md  post-lifetime.md  session-distribution-fitting.md  structural-virality.md  twitter-session-analytics-replication.md
eda-raw-dataset/: README.md  build_events.py  hourly_variability.py  lognormal_fit.py  main.py  plot_events.py  powerlaw_fit.py  pyproject.toml  user.py
eda-raw-dataset/plots/: event_types.tsv
eda-raw-dataset/user-events/: ecdf_comparison.py  event_per_user_fitting.py  hourly_variability.py  lognormal_fit.py  user.py  user_hists.py
eda-raw-dataset/user-events/plots/: ecdf_parameters.tsv  fitting_comparison.tsv  fitting_parameters.tsv  user_hists_parameters.tsv
inter-post-gaps/: extract.py  fit.R  plot.py  plot_pareto_ecdf.py
larrys-dataset/: create_larrys.py
post-lifetime/: README.md  analyze_post_lifetime.py  build_lifetime  eda-results.md  inter_post_gap_fit.R  inter_post_gaps.py  plot_inter_post_gap_params.py
session-analysis/: README.md  eda.py  eda_event_histogram.py  export_sessions_csv.py  plot_parameter_densities.py  session_core_events.py  session_distribution_fit.R  session_distribution_fit.py  session_engagement_analysis.py  session_threshold_elbow.py  user_time_entropy.py
(+154 files in other folders)
