[project]
name = "eda-raw-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "polars>=1.43.0",
    "powerlaw>=2.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
